Fixed link issue with inserting z-index

--- a/src/style/sass/footer.scss
+++ b/src/style/sass/footer.scss
@@ -7,6 +7,7 @@ $gray: #212121;
     img {
       position: relative;
       top: 2em;
+      z-index: -1;
     }
     p{
       margin-top: 0;
